# TRP2

./: .coderabbit.yaml  Makefile  README.md  pyproject.toml
.cursor/rules/: chimera-context.md
.github/workflows/: main.yml
skills/autonomous-reply-engagement/: README.md
skills/persona-consistent-content-generation/: README.md
skills/social-listening-trend-spotting/: README.md
src/: orchestrator.py
src/memory/: stubs.py
src/skills/: autonomous_reply_engagement.py  persona_consistent_content_generation.py  social_listening.py
src/swarm/: judge.py  planner.py  worker.py
tests/: test_skills_interface.py  test_trend_fetcher.py
